@@ -1,3 +1,8 @@
+Mon Mar  4 01:50:53 CET 2013  John Tytgat  <John.Tytgat@aaug.net>
+
+	* stdio/ul_fdopen.c (fdopen): Set errno to EINVAL for invalid mode.
+	Properly check on file descriptor validness.
+
 Mon Mar  4 01:44:36 CET 2013  John Tytgat  <John.Tytgat@aaug.net>
 
 	* unix/custom.c (__unixlib_getdev): Merge into...
